Combine external links into single column with pipe separator

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -44,12 +44,8 @@
     width: 10%;
   }
 
-  .freefeed-column {
-    width: 8%;
-  }
-
-  .source-column {
-    width: 8%;
+  .external-links-column {
+    width: 16%;
   }
 }
 
