Change 'Published At:' to 'Published:' in post detail view

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
       </div>
 
       <div class="list-group-item">
-        <strong>Published At:</strong>
+        <strong>Published:</strong>
         <%= long_time_format(@post.published_at) if @post.published_at %>
       </div>
 
