Split external links back into separate FreeFeed and Source columns

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -44,8 +44,12 @@
     width: 10%;
   }
 
-  .external-links-column {
-    width: 16%;
+  .freefeed-column {
+    width: 8%;
+  }
+
+  .source-column {
+    width: 8%;
   }
 }
 
