--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -68,7 +68,7 @@
 </div>
 
 <div class="mt-4">
-  <h3 class="mb-3">Feed Statistics</h3>
+  <h3 class="mb-3">Stats</h3>
   <div class="list-group">
     <div class="list-group-item">
       <div class="row">
