Replace 'No posts' with 'None' in feeds table

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -54,7 +54,7 @@
                       <%= short_time_ago(feed.most_recent_post_date) %>
                     </small>
                   <% else %>
-                    <em class="text-muted">No posts</em>
+                    <em class="text-muted">None</em>
                   <% end %>
                 </td>
               </tr>
