Remove compact_time_ago and use short_time_ago everywhere

--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -54,7 +54,7 @@
             </td>
             <td class="text-center">
               <span class="text-muted" title="<%= event.created_at.rfc3339 %>">
-                <%= compact_time_ago(event.created_at) %>
+                <%= short_time_ago(event.created_at) %>
               </span>
             </td>
           </tr>
