Update button caption

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "Post Details" %>
 
 <%= page_header "Post Details" do %>
-  <%= link_to "← Back to Posts", posts_path, class: "btn btn-outline-secondary" %>
+  <%= link_to "Back to Posts", posts_path, class: "btn btn-outline-secondary" %>
 <% end %>
 
 <div class="row">
