--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -15,41 +15,24 @@
 // Posts table styling
 .posts-table {
   table-layout: fixed;
+  width: 100%;
 
   .content-column {
-    width: 40%;
-    max-width: 300px;
+    width: 50%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
   }
 
   .feed-column {
-    width: 15%;
-    max-width: 150px;
+    width: 25%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
   }
 
-  .published-column {
-    width: 10%;
-  }
-
-  .count-column {
-    width: 8%;
-  }
-
-  .status-column {
-    width: 10%;
-  }
-
-  .freefeed-column {
-    width: 8%;
-  }
-
-  .source-column {
-    width: 8%;
+  .narrow-column {
+    width: 1%;
+    white-space: nowrap;
   }
 }
-
