--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -14,7 +14,6 @@
 
 // Posts table styling
 .posts-table {
-  table-layout: fixed;
   width: 100%;
 
   .content-column {
@@ -32,7 +31,12 @@
   }
 
   .narrow-column {
-    width: 1%;
+    white-space: nowrap;
+  }
+
+  .source-column,
+  .freefeed-column {
+    width: 1px;
     white-space: nowrap;
   }
 }
