--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -12,3 +12,36 @@
   }
 }
 
+// Posts table styling
+.posts-table {
+  width: 100%;
+  table-layout: auto;
+
+  .content-column {
+    max-width: 0;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .feed-column {
+    width: 1px;
+    min-width: 120px;
+    max-width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .narrow-column {
+    width: 1px;
+    white-space: nowrap;
+  }
+
+  .source-column,
+  .freefeed-column {
+    width: 1px;
+    white-space: nowrap;
+  }
+}
