--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -20,8 +20,8 @@
           <th>Name</th>
           <th>Instance</th>
           <th>Status</th>
-          <th>Created</th>
-          <th>Last Used</th>
+          <th style="width: 1%">Created</th>
+          <th style="width: 1%">Last Used</th>
           <th class="text-end">Actions</th>
         </tr>
       </thead>
@@ -39,13 +39,13 @@
             </td>
             <td>
               <span class="text-muted">
-                <%= time_ago_in_words(access_token.created_at) %> ago
+                <%= short_time_ago(access_token.created_at) %>
               </span>
             </td>
             <td>
               <% if access_token.last_used_at %>
                 <span class="text-muted">
-                  <%= time_ago_in_words(access_token.last_used_at) %> ago
+                  <%= short_time_ago(access_token.last_used_at) %>
                 </span>
               <% else %>
                 <span class="text-muted">Never</span>
