Add ellipsis overflow to Name column in access tokens table

--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -28,7 +28,7 @@
       <tbody>
         <% @access_tokens.each do |access_token| %>
           <tr>
-            <td>
+            <td style="max-width: 200px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">
               <%= access_token.name %>
             </td>
             <td>
