Prevent text wrapping in Created and Last Used headers

--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -20,8 +20,8 @@
           <th>Name</th>
           <th>Instance</th>
           <th>Status</th>
-          <th style="width: 1%">Created</th>
-          <th style="width: 1%">Last Used</th>
+          <th style="width: 1%; white-space: nowrap;">Created</th>
+          <th style="width: 1%; white-space: nowrap;">Last Used</th>
           <th class="text-end">Actions</th>
         </tr>
       </thead>
