Swap New Token and Back to Settings button order

--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -1,7 +1,7 @@
 <%= page_header "Access Tokens" do %>
   <div class="d-flex align-items-center">
-    <%= link_to "New Token", new_settings_access_token_path, class: "btn btn-primary me-3" %>
-    <%= link_to "Back to Settings", settings_path, class: "btn btn-outline-secondary" %>
+    <%= link_to "Back to Settings", settings_path, class: "btn btn-outline-secondary me-3" %>
+    <%= link_to "New Token", new_settings_access_token_path, class: "btn btn-primary" %>
   </div>
 <% end %>
 
