--- a/app/views/settings/access_tokens/index.html.erb
+++ b/app/views/settings/access_tokens/index.html.erb
@@ -14,7 +14,7 @@
 
 <% if @access_tokens.any? %>
   <div class="table-responsive">
-    <table class="table table-hover table-bordered">
+    <table class="table table-hover table-bordered" style="white-space: nowrap;">
       <thead>
         <tr>
           <th>Name</th>
