Add unpublish button to post show page

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,17 @@
 <% content_for :title, "Post Details" %>
 
 <%= page_header "Post Details" do %>
-  <%= link_to "Back to Posts", posts_path, class: "btn btn-outline-secondary" %>
+  <div class="d-flex align-items-center">
+    <%= link_to "Back to Posts", posts_path, class: "btn btn-outline-secondary me-3" %>
+    <% if policy(@post).destroy? %>
+      <%= button_to "Unpublish", post_path(@post),
+                    method: :delete,
+                    class: "btn btn-danger",
+                    data: {
+                      turbo_confirm: "Unpublish this post? It will be removed from FreeFeed but remain visible here."
+                    } %>
+    <% end %>
+  </div>
 <% end %>
 
 <div class="row">
