Add Group Purge link to Admin Panel

--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -31,6 +31,19 @@
             </div>
           </div>
         </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">
+                <i class="bi bi-trash me-2"></i>
+                Group Purge
+              </h5>
+              <p class="card-text">Withdraw all posts from a FreeFeed group</p>
+              <%= link_to "Purge Group", new_admin_purge_path, class: "btn btn-danger" %>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
